RequestDetails: Fix CSS of Pic-Frame--Quick-Zoom so z-index works

--- a/src/app/modules/responses/request-details/request-details.component.scss
+++ b/src/app/modules/responses/request-details/request-details.component.scss
@@ -33,6 +33,7 @@ $requestDetailsZIndex: 1;
 
   // Transformation to zoom-in on image
   &:hover {
+    position: fixed;
     z-index: calc(#{$requestDetailsZIndex} + 1);
 
     img {
